--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<ngb-carousel>
+  <ng-template ngbSlide>
+
+    <img
+      src="assets/images/hero1.jpg"
+      alt="Random first slide" />
+
+  </ng-template>
+  <ng-template ngbSlide>
+
+    <img
+      src="https://static.toiimg.com/thumb/msid-86556990,imgsize-130032,width-400,resizemode-4/86556990.jpg"
+      alt="Random second slide" />
+
+  </ng-template>
+  <ng-template ngbSlide>
+
+    <img
+      ref="https://glamobserver.com/wp-content/uploads/2022/12/how-do-fashion-trends-start.jpg"
+      alt="Random third slide" />
+  </ng-template>
+</ngb-carousel>
