--- a/Angular/src/app/shop/shop.component.html
+++ b/Angular/src/app/shop/shop.component.html
@@ -1,64 +1,64 @@
 <div class="container">
   <div class="row">
-    <section class="col-3">
+    <section class="col-3" *ngIf="types.length > 0 && brands.length > 0">
       <h5 class="text-warning ms-3">Sort</h5>
       <select class="form-select mb-4" (change)="onSortSelected($event)">
         @for (sort of sortOptions; track sort) {
-          <option [value]="sort.value">
-            {{sort.name}}
-          </option>
+        <option [value]="sort.value">
+          {{sort.name}}
+        </option>
         }
       </select>
       <h5 class="text-warning ms-3">Brands</h5>
-        <ul class="list-group my-3">
-          @for(brand of brands; track brand){
-          <li class="list-group-item" aria-current="true"
+      <ul class="list-group my-3">
+        @for(brand of brands; track brand){
+        <li class="list-group-item" aria-current="true"
           [class.active]="brand.id === shopParams.brandId"
           (click)="onBrandSelected(brand.id)">
-            {{brand.name}}
-          </li>
-          }
+          {{brand.name}}
+        </li>
+        }
 
-        </ul>
-        <h5 class="text-warning ms-3">Types</h5>
-        <ul class="list-group my-3">
-          @for(type of types; track type){
-          <li class="list-group-item" aria-current="true"
+      </ul>
+      <h5 class="text-warning ms-3">Types</h5>
+      <ul class="list-group my-3">
+        @for(type of types; track type){
+        <li class="list-group-item" aria-current="true"
           [class.active]="type.id === shopParams.typeId"
-          (click)="onTypeSelected(type.id)"
-          >
-            {{type.name}}
-          </li>
-          }
-        </ul>
+          (click)="onTypeSelected(type.id)">
+          {{type.name}}
+        </li>
+        }
+      </ul>
     </section>
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <app-paging-header
           [totalCount]="totalCount"
           [pageNumber]="shopParams.pageNumber"
-          [pageSize]="shopParams.pageSize"
-        ></app-paging-header>
-          @if (totalCount === 0) {
-            <span>Showing <strong>0</strong> of <strong>0</strong> Results</span>
-          }
+          [pageSize]="shopParams.pageSize"></app-paging-header>
+        @if (totalCount === 0) {
+        <span>Showing <strong>0</strong> of <strong>0</strong> Results</span>
+        }
         <div class="d-flex mt-2">
-          <input (keydown.enter)="onSearch()" type="text" placeholder="Search" class="form-control me-2" #search>
-          <button (click)="onSearch()" class="btn btn-outline-primary mx-2">Search</button>
-          <button (click)="onReset()" class="btn btn-outline-success">Result</button>
+          <input (keydown.enter)="onSearch()" type="text" placeholder="Search"
+            class="form-control me-2" #search>
+          <button (click)="onSearch()"
+            class="btn btn-outline-primary mx-2">Search</button>
+          <button (click)="onReset()"
+            class="btn btn-outline-success">Result</button>
         </div>
       </div>
       <div class="row row-cols-3 g-3 mb-5">
         @for (product of products; track product) {
-          <app-product-item [product]="product"></app-product-item>
+        <app-product-item [product]="product"></app-product-item>
         }
       </div>
       <div class="d-flex justify-content-center">
         <app-pager
           [totalCount]="totalCount"
           [pageSize]="shopParams.pageSize"
-          (pageChanged)="onPageChanged($event)"
-        >
+          (pageChanged)="onPageChanged($event)">
 
         </app-pager>
       </div>
