--- a/Angular/src/app/nav/nav.component.html
+++ b/Angular/src/app/nav/nav.component.html
@@ -1,4 +1,5 @@
-<header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3
+<header
+  class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3
   bg-white border-bottom fixed-top shadow-sm">
   <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">
   <nav class="my-2 text-uppercase fs-3">
@@ -8,11 +9,19 @@
     <a class="p-2" routerLink="/contact" routerLinkActive="active">Contact</a>
   </nav>
   <div class="d-flex align-items-center">
-    <a class="position-relative">
-      <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
-      <div class="cart-no">5</div>
+    <a routerLink="/basket" class="position-relative">
+      <svg style="margin-right: 20px;" xmlns="http://www.w3.org/2000/svg"
+        width="16" height="16"
+        fill="currentColor" class="bi bi-basket" viewBox="0 0 16 16">
+        <path
+          d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1v4.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 13.5V9a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h1.217L5.07 1.243a.5.5 0 0 1 .686-.172zM2 9v4.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V9zM1 7v1h14V7zm3 3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 4 10m2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 6 10m2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 8 10m2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5m2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5" />
+      </svg>
+      <div *ngIf="(basketService.basketSource$ | async) as basket"
+        class="cart-no">
+        {{getCount(basket.items)}}
+      </div>
     </a>
-    <a href="" class="btn btn-outline-secondary me-2">Login</a>
-    <a href="" class="btn btn-outline-secondary me-3">Sign up</a>
+    <a href class="btn btn-outline-secondary me-2">Login</a>
+    <a href class="btn btn-outline-secondary me-3">Sign up</a>
   </div>
 </header>
