--- a/Angular/src/app/shop/product-item/product-item.component.html
+++ b/Angular/src/app/shop/product-item/product-item.component.html
@@ -4,7 +4,8 @@
     <img src="{{product.pictureUrl}}" alt="{{product.name}}"
       class="img-fluid bg-info">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button class="btn btn-principal fa fa-shopping-cart me-2">
+      <button (click)="addItemToBasket()"
+        class="btn btn-principal fa fa-shopping-cart me-2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
           fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
           <path
